--- a/_posts/2019-12-27-the-us-narrative-today.html
+++ b/_posts/2019-12-27-the-us-narrative-today.html
@@ -554,107 +554,108 @@ stories:
   domain: http://www.dnews.com/
   link: http://butterfieldnews.com/2016/04/04/why-do-credit-cards-offer-sign-up-bonus-deals-to-attract-new-customers/
 images:
-- name: blossombar-blossombar-still.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-blossombar-still.jpg
-- name: crow_light_dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_light_dali.jpg
-- name: miamibeach-miamibeach-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-dark-soul.jpg
-- name: fast-lights-freeway-redes-fast-flux-623x425-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-sand-paper.jpg
-- name: soldier-kneeling-26304845730-d4e495e25f-o-copper-circuit-2.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-copper-circuit-2.jpg
-- name: old-door-lock-old-door-lock-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-monet-one.jpg
-- name: birdhouse-birdhouse-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-bright-sand.jpg
-- name: bordercrossing-bordercrossing-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-umberto-bocc.jpg
-- name: abe-lincoln-one-purple-storm-file-00-00-15-87.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-purple-storm-file-00-00-15-87.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-alberto-giacometti.jpg
-- name: aws-s3-stories-containership-copper-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-containership-copper-circuit.jpg
-- name: locked-up-steam-lock-up-steam-blue-circuit-4.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-blue-circuit-4.jpg
-- name: old-granary-field-oldhouse-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-aqua.jpg
-- name: bf-skinner-supreme-court_36341562380_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-supreme-court_36341562380_o.jpg
-- name: gears-4882162452-fa3126b38d-b-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-crabapple.jpg
-- name: supreme-court-supremecourt-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-really-hot.jpg
-- name: server-cloud-server-racks-door-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-crabapple.jpg
-- name: razorcliff-razorcliff-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-constitution.jpg
-- name: fast-lights-freeway-redes-fast-flux-623x425-propaganda-leaflets.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-propaganda-leaflets.jpg
-- name: old-door-lock-old-door-lock-2-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-spagetti-accident.jpg
-- name: soldier-kneeling-26304845730-d4e495e25f-o-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-rainbow-festival.jpg
-- name: sand-hand-sand-hand-copper-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-copper-circuit.jpg
-- name: status-berlin-status-berlin-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-atari-missle.jpg
-- name: white-house-whitehouse-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-kand-two.jpg
-- name: statue-face-open-mouth-statue-face-open-mouth-colorful-dream.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-face-open-mouth-statue-face-open-mouth-colorful-dream.png
-- name: liberty-back-statue-liberty-back-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-spagetti-accident.jpg
-- name: miamibeach-miamibeach-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-atari-asteroids.jpg
-- name: locked-up-steam-lock-up-steam-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-purple-pond.jpg
-- name: flower-barbed-wire-flower-barbed-wire-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-creativity.jpg
-- name: berlinwall2-berlinwall-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-mucha-mult.jpg
-- name: aws-s3-square-66-189-800-500-0-max-0--1--1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-66-189-800-500-0-max-0--1--1.jpg
-- name: bordercrossing-bordercrossing-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-sand-paper.jpg
-- name: subway-subway-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-emily-carr.jpg
-- name: bluelake-purple-pond-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-purple-pond-file-00-00-00-00.jpg
-- name: eduardo-eduardo-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-diego-rivera1.jpg
-- name: rockingchair-rockingchair-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-internet-numbers.jpg
-- name: rockingchair-rockingchair-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-spagetti-accident.jpg
-- name: window-window-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-neo-instinct.jpg
-- name: rain-princess-IMG_8494.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-IMG_8494.jpg
-- name: amusement-park-amusement-park-2-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-oily-mcoilface.jpg
-- name: lincoln-memorial-lincolnmemorial-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-spagetti-accident.jpg
-- name: border-fence-border-fence-on-hill-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-umberto-bocc.jpg
-- name: oldhousecars-house-old-cars-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-blue-electricity.jpg
-- name: containership-containership-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-light-dali.jpg
-- name: eduardo-eduardo-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-emily-carr.jpg
-- name: adam-smith-adam-smith-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-sunday.jpg
-- name: crypto-machine-bletchley-crypto-machine-bletchley-space-pizza.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-space-pizza.png
-- name: oldhouse-oldhouse-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-green-zuma.jpg
-- name: store-on-corner-oldcabin-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-rainbow-festival.jpg
-- name: fence-mexico-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-crunch-paper.jpg
-- name: school-clouds-church-clouds-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-green-zuma.jpg
+- name: bf-skinner-small-town-street-2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-small-town-street-2.jpg
+- name: docks-docks-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-diego-rivera1.jpg
+- name: yosemite-yosemite-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-atari-missle.jpg
+- name: copper-circuit-street-car-san-francisco.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-street-car-san-francisco.jpg
+- name: nazi-invasion-building-shadows-sun.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-building-shadows-sun.jpg
+- name: aws-s3-stories-algo-microservices.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-algo-microservices.jpg
+- name: nazi-invasion-people-eating-canal.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-people-eating-canal.jpg
+- name: castle-wall-DSC-0067-nazi-poster.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-nazi-poster.JPG
+- name: berlinwall-DSC-0084-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-post-modern.jpg
+- name: carry-load-carryload-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-umberto-bocc.jpg
+- name: meadowbutterfly-meadow-butterfly-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-dali-three.jpg
+- name: statue-of-liberty-front-view-statueofliberty-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-dali-two.jpg
+- name: stalin-time-volkswagon-microbus-windows.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-volkswagon-microbus-windows.jpg
+- name: redondo-beach-harbor-redondo-beach-harbor-attack-planes.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor-attack-planes.jpg
+- name: downtown-los-angeles-downtown-la-copper-circuit-2.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-copper-circuit-2.JPG
+- name: dc-statue-dcstatue-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-clean-view.jpg
+- name: store-on-corner-store-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-sunday.jpg
+- name: white-house-whitehouse-propaganda-leaflets.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-propaganda-leaflets.jpg
+- name: machine-road-machine-road-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-oily-mcoilface.jpg
+- name: containership-containership-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-alberto-giacometti.jpg
+- name: file-00-00-00-00 2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/file-00-00-00-00
+    2.jpg
+- name: copper-circuit-old-broken-piano-street.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-old-broken-piano-street.jpg
+- name: san-francisco-city-bridge-sf-city-bridge-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-dali-two.jpg
+- name: crow_mucha_mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_mucha_mult.jpg
+- name: soldier-kneeling-26304845730-d4e495e25f-o-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-dark-dali.jpg
+- name: razorcliff-razorcliff-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-dark-dali.jpg
+- name: sand-hand-sand-hand-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-dali-two.jpg
+- name: crow-crow-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-post-modern.jpg
+- name: hollywood-building-hollywood-building-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-neo-instinct.jpg
+- name: crow_aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_aqua.jpg
+- name: gears-4882162452-fa3126b38d-b-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-crafty-painting.jpg
+- name: capital-battle-capitolbattle-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-blue-granite.jpg
+- name: ellis-island-ellis-island-room-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-ww2-color.jpg
+- name: la-muse-cruise-ship-shore-log.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-cruise-ship-shore-log.jpg
+- name: nazi-invasion-oxford-old-building.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-oxford-old-building.jpg
+- name: server-racks-door.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-racks-door.jpg
+- name: nazi-invasion-british-sgtreet-phone-booth.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-british-sgtreet-phone-booth.jpg
+- name: capital-battle-capitolbattle-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-umberto-bocc.jpg
+- name: powerlines-power-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-colored-circuits.jpg
+- name: machine-road-machine-road-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-hot-spicy.jpg
+- name: flower-barbed-wire-flower-barbed-wire-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-dry-skin.jpg
+- name: razorcliff-razorcliff-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-aqua.jpg
+- name: san-francisco-skyline-night-san-francisco-skyline-night-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-crafty-painting.jpg
+- name: braceros-domingo-ulloa-border-crossing-through-fence-2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-border-crossing-through-fence-2.jpg
+- name: oldhousecars-house-old-cars-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-kand-two.jpg
+- name: powerlines-power-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-space-pizza.jpg
+- name: oldtrain-oldtrain-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-crabapple.jpg
+- name: art-museum-art-museum-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-smooth-ride.jpg
+- name: san-francisco-street-view-san-francisco-street-view-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-blue-circuit.jpg
+- name: oldcabin-store-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-smoking-cigarette.jpg
+- name: berlinwall-DSC-0084-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-green-zuma.jpg
 ---
 Sheriff Needs Your Help.&nbsp;New Chiropractor To Open Lennox Office In December.&nbsp;Patrick Short On Signatures To Make Michigan Primary Ballot.&nbsp;Colts Formulating Offseason Plan For Brissett.&nbsp;Decatur Heritage Gets A Taste Of Class 7A.&nbsp;Lady Leopards Fall In Conference Hoops Hosting Mena.&nbsp;Pothole Christmas Tree Inspires Pastor To A Write Holiday Song.&nbsp;Pitt Rallies To Beat Eastern Michigan In Quick Lane Bowl.&nbsp;
